# CodeSamples

./: .gitignore  MPI_max.sh  MPI_pi.c  MPI_pi.sh  README.md  exportPPM.h  sum16.c  sum16.sh
Buffer2D/: Buffer2D.hpp  Buffer2D.inl
Buffer2D/test/: buffer.sh  main.cpp
FractalFlames/: CMakeLists.txt  edit.sh  make.sh  run.sh
FractalFlames/image/: barnsley_fern.ppm  barnsley_fern_mutated.ppm  heighway_dragon_cartesian.ppm  heighway_dragon_complex.ppm  levy_curve.ppm  serpinski_gasket.ppm  ter_dragon_complex.ppm  twin_dragon_complex.ppm
FractalFlames/src/: Color.cpp  Color.hpp  FlameFunctor.cpp  FlameFunctor.hpp  FlameFunctor.inl  Palette.inl  main.cpp  temp
GL/: GL.cpp  GL.h  GL.inl
MPI/: MPI_max.sh  MPI_pi.sh
MPI/test/: MPI_max.sh  MPI_pi.sh
Shadertoy/: chromosome.txt
TaskPool/: TaskPool.cpp  TaskPool.h
bmp/: bmp.cpp  bmp.hpp
bmp/test/: bmp.sh  main.cpp
collision/: Collision.cpp  Collision.h
math/: mat.h  mat.inl  vec.h  vec.inl
ppm/: main.cpp  ppm.cpp  ppm.hpp  ppm.sh
ppm/test/: main.cpp  ppm.sh
print/: print.h
reverse_list/: reverse_list.c
reverse_list/test/: reverse_list.sh
src/: IO_PPM.h  MPI_max.c  vec3.h
sum16/: sum16.c
sum16/test/: sum16.sh
test/: MPI_max.sh  MPI_pi.sh  sum16.sh  vec3.cpp  vec3.sh
vec2/: vec2.h  vec2.sh  vec2_math.inl  vec2_operator.inl  vec2_pod.h
vec2/test/: main.cpp  vec2.sh
vec3/: main.cpp  vec3.h  vec3.sh  vec3_math.cpp  vec3_math.h  vec3_math.inl  vec3_operator.cpp  vec3_operator.h  vec3_operator.inl  vec3_pod.h
win32WindowSoundInput/: build.bat  debug.bat  launch.bat  shell.bat  vim.bat
(+2 files in other folders)
